# CMakeTutorial

./: .gitignore  README.md
Step1/: CMakeLists.txt  README.md  tutorial.cxx
Step1/Step1_build/: Tutorial
Step10/: CMakeLists.txt  CTestConfig.cmake
Step10/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Step10/Step10_build/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  MakeTable  Tutorial  Tutorial 2
Step10/installdir/lib/: libMathFunctions.dylib
Step11/: CMakeLists.txt  README.md
Step11/MathFunctions/: CMakeLists.txt
Step11/Step11_build/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Tutorial  libMathFunctions.dylib
Step11/installdir/lib/cmake/MathFunctions/: MathFunctionsTargets-noconfig.cmake
Step12/: CMakeLists.txt  MultiCPackConfig.cmake  README.md  Tutorial-1.0-Darwin.sh  tutorial.cxx
Step12/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
Step12/Step12_build/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  MakeTable  Tutorial  Tutoriald  libMathFunctionsd.1.0.0.dylib  libMathFunctionsd.dylib
Step12/debug/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  MakeTable  Tutoriald
Step12/installdir/lib/: libMathFunctions.1.0.0.dylib
Step12/release/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Tutorial
Step2/: CMakeLists.txt  README.md  tutorial.cxx
Step2/MathFunctions/: mysqrt.cxx
Step3/: CMakeLists.txt  README.md
Step3/MathFunctions/: CMakeLists.txt
Step3/Step3_build/: Tutorial
Step4/: CMakeLists.txt  README.md
Step4/MathFunctions/: CMakeLists.txt
Step5/: CMakeLists.txt  README.md  tutorial.cxx
Step5/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Step5/Step5_build/: Tutorial
Step6/: CMakeLists.txt  README.md
Step6/MathFunctions/: CMakeLists.txt
Step7/: README.md
Step7/Step7_build/: Tutorial-1.0-Darwin.sh
Step7/Step7_build/MathFunctions/: MakeTable
Step8/: CMakeLists.txt  README.md
Step8/Step8_build/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl
Step9/: CMakeLists.txt  README.md
Step9/MathFunctions/: mysqrt.h
Step9/Step9_build/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Tutorial
(+18 files in other folders)
